--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h3>And I'm a <span class="multiple-text"></span></h3>
             <p>I am from Chandil which is in Jharkhand. I completed my Bachelor of computer application from BIT Mesra and secured overall 8.2 cgpa. I secured 80.2% in my secondary education exams and 88.2% in matriculation. My hobbies are playing guitar and badminton.That's all about me.</p>
             <div class="home-social">
-                <a href="images/akashResume.pdf" class="btn" target="_blank">Download Resume</a>
+                <a href="images/akash_daripa_Resume.pdf" class="btn" target="_blank">Download Resume</a>
                 <div class="home-icons">
                     <a href="https://linkedin.com/in/akash-daripa-1833a7331" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     <a href=""><i class="fa-brands fa-github"></i></a>
@@ -179,4 +179,5 @@
     <!-- Custom js -->
      <script src="home.js"></script>
 </body>
+
 </html>
