--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a href="images/akash_daripa_Resume.pdf" class="btn" target="_blank">Download Resume</a>
                 <div class="home-icons">
                     <a href="https://linkedin.com/in/akash-daripa-1833a7331" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href=""><i class="fa-brands fa-github"></i></a>
+                    <a href="https://github.com/Akash-061003" target="_blank"><i class="fa-brands fa-github"></i></a>
                     <a href=" https://www.instagram.com/invites/contact/?utm_source=ig_contact_invite&utm_medium=copy_link&utm_content=7vgb1oe" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-facebook"></i></a>
                 </div>
@@ -181,3 +181,4 @@
 </body>
 
 </html>
+
