--- a/index.html
+++ b/index.html
@@ -123,21 +123,30 @@
                 <img src="images/proj1.png" alt="">
                 <div class="project-layer">
                     <h4>Calculater</h4>
-                    <a href="projects/Calculater/index.html" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <div class="project-link">
+                        <a href="projects/Calculater/index.html" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i><p>Link</p></a>
+                        <a href="https://github.com/Akash-061003/Calculator.git" target="_blank"><i class="fa-solid fa-code"></i><p>Code</p></a>
+                    </div>
                 </div>
             </div>
             <div class="project-box">
                 <img src="images/proj2.png" alt="">
                 <div class="project-layer">
-                    <h4>Shopping Website</h4>
-                    <a href="projects/Flipkart Clone/index.html" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h4>Flipkart Clone</h4>
+                    <div class="project-link">
+                        <a href="projects/Flipkart Clone/index.html" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i><p>Link</p></a>
+                        <a href="https://github.com/Akash-061003/Flipkart-Clone.git" target="_blank"><i class="fa-solid fa-code"></i><p>Code</p></a>
+                    </div>
                 </div>
             </div>
             <div class="project-box">
                 <img src="images/proj3.png" alt="">
                 <div class="project-layer">
                     <h4>Stone Paper Scissor Game</h4>
-                    <a href="projects/Rock paper scissor/index.html" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <div class="project-link">
+                        <a href="projects/Rock paper scissor/index.html" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i><p>Link</p></a>
+                        <a href="https://github.com/Akash-061003/Stone_paper_Scissor_Game.git" target="_blank"><i class="fa-solid fa-code"></i><p>Code</p></a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -181,4 +190,5 @@
 </body>
 
 </html>
+
 
