--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="project-box">
                 <img src="images/proj3.png" alt="">
                 <div class="project-layer">
-                    <h4>Stone Paper Scissor Game</h4>
+                    <h4>Rock Paper Scissor Game</h4>
                     <div class="project-link">
                         <a href="projects/Rock paper scissor/index.html" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i><p>Link</p></a>
                         <a href="https://github.com/Akash-061003/Stone_paper_Scissor_Game.git" target="_blank"><i class="fa-solid fa-code"></i><p>Code</p></a>
@@ -190,5 +190,6 @@
 </body>
 
 </html>
+
 
 
